----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-06-04 Michal Čihař  <michal@cihar.com>
    * libraries/read_dump.lib.php: Do not strip comments here.
    * libraries/sqlparser.lib.php: Handle correctly all MySQL comments (-- can
      be followed with any control char) (patch #965106).
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat.

2004-06-04 Garvin Hicking <me@supergarv.de>
    * Bug #959320: Broken row highlighting in vertical
      browsing mode fixed. The pointer will now highlight
      columns as expected and unmark the row after unclicking.

2004-06-03 Alexander M. Turek  <me@derrabus.de>
    * header.inc.php: Undefined variable.

2004-06-03 Michal Čihař  <michal@cihar.com>
    * db_details_links.php, header.inc.php, server_links.inc.php,
      tbl_properties_links.php, css/phpmyadmin.css.php: Use classes for
      heading (RFE #965542).
    * libraries/common.lib.php: Add drop class also to td (RFE #946540).
    * db_details.php, db_details_structure.php, css/phpmyadmin.css.php: CSSize
      error messages.
    * header.inc.php: Remove spaces before colons (bug #965594).
    * lang/*, libraries/common.lib.php: Remove spaces from strServer,
      strDatabase (needed for above fix).
    * libraries/config_import.lib.php: Do not override
      $cfg['ShowHttpHostTitle'].
    * config.inc.php, css/phpmyadmin.css.php, libraries/config_import.lib.php:
      Can disable main page icons (bug #965550).
    * header.inc.php, css/phpmyadmin.css.php: Use span insted of div, div is
      not allowed here.
    * tbl_query_box.php: Fix default query generating.

2004-06-02 Alexander M. Turek  <happybirthdaytome@derrabus.de>
    * db_details_db_info.php, tbl_properties_tbl_info.php: Table type is called
      "Engine" in MySQL 4.1.2 (bug #964011).

2004-05-31 Marc Delisle  <lem9@users.sourceforge.net>
    * header.inc.php: bug #963414, when PropertiesIconic was false,